--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.11.0",
     "react-progressbar-semicircle": "^1.2.1",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-strap": "0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
