--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "apexcharts": "^3.10.1",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.11.0",
     "react-apexcharts": "^1.3.3",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.11.0",
     "react-progressbar-semicircle": "^1.2.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-strap": "0.0.1"
   },
